--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,1 +1,41 @@
+name: Python CI
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+        pip install coverage
+
+    - name: Run Unit Tests
+      run: make test
+
+    - name: Run Integration Tests
+      run: make integration-test
+
+    - name: Run Coverage
+      run: make coverage
+
+    - name: Upload Calculator Script
+      uses: actions/upload-artifact@v4
+      with:
+        name: calculator-main
+        path: main.py
 
