--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
 
     - name: Run Tests
       run: |
+        source venv/bin/activate
         make test
         make integration-test
         make coverage
