--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
 
     - name: Package as Executable
       run: |
+        source venv/bin/activate
         pyinstaller --onefile main.py --name calculator-main
 
     - name: Upload Executable Artifact
